--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Solano
 
-{<img src="https://ci.solanolabs.com:443/solanolabs/tddium/badges/18269.png?badge_token=31b55379f4209b2935e283ebf4c9ffc22892fde8"/>}[https://ci.solanolabs.com:443/solanolabs/tddium/suites/18269]
+{<img src="https://ci.solanolabs.com:443/solanolabs/solano/badges/branches/master"/>}[https://ci.solanolabs.com:443/solanolabs/solano/suites/120685]
 {<img src="https://badge.fury.io/rb/solano.svg" alt="Gem Version" />}[http://badge.fury.io/rb/solano]
 
 Solano CI is a hosted continuous deployment platform that runs your build
